@@ -1119,6 +1119,7 @@ ResourceManager REST API's.
   * startedTimeEnd - applications with start time ending with this time, specified in ms since epoch
   * finishedTimeBegin - applications with finish time beginning with this time, specified in ms since epoch
   * finishedTimeEnd - applications with finish time ending with this time, specified in ms since epoch
+  * applicationTypes - applications matching the given application types, specified as a comma-separated list.
 ------
 
 ** Elements of the <apps> (Applications) object
